syntax = "proto3";
package order_requests;

message PlaceMarketOrderRequest {
  string order_id = 1;
  uint64 user_id = 2;
  uint64 size = 3;
  uint64 max_price = 4;
  OrderSide order_side = 5;
  uint64 maker_fee = 6;
  uint64 taker_fee = 7;
  uint64 timestamp = 8;
}

message PlaceLimitOrderRequest {
  string order_id = 1;
  uint64 user_id = 2;
  uint64 size = 3;
  uint64 price = 4;
  OrderSide order_side = 5;
  uint64 maker_fee = 6;
  uint64 taker_fee = 7;
  uint64 timestamp = 8;
}

enum OrderSide {
  ASK = 0;
  BID = 1;
}