syntax = "proto3";
package request_response;

import "proto_decimal.proto";

message RequestResponse {
    string request_id = 1;
    uint64 order_id = 2;
    uint64 user_id = 3;
    repeated Fill fills = 4;
    proto_decimal.ProtoDecimal maker_fee_amount = 5;
    proto_decimal.ProtoDecimal taker_fee_amount = 6;
    uint64 timestamp = 7;
}

message Fill {
    uint64 filled_order_id = 1;
    uint64 filled_amount = 2;
    bool filled_in_full = 3;
}